--- a/notebooks/Houdinis_Framework_Conclusion.ipynb
+++ b/notebooks/Houdinis_Framework_Conclusion.ipynb
@@ -778,12 +778,12 @@
     "\n",
     "---\n",
     "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/houdinis-framework)  \n",
+    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
     "**📜 License:** MIT - Use responsibly and ethically\n",
     "\n",
     "print(final_message)\n",
     "print(\"\\n📧 Contact: mauro.risonho@gmail.com\")\n",
-    "print(\"🌐 Project: https://github.com/firebitsbr/houdinis-framework\")\n",
+    "print(\"🌐 Project: https://github.com/firebitsbr/Houdinis\")\n",
     "print(\"📅 Completion Date: August 7, 2025\")\n",
     "print(\"🏆 Status: FRAMEWORK COMPLETE AND OPERATIONAL\")\n",
     "print(\"\\n\" + \"=\" * 70)"
@@ -853,7 +853,7 @@
     "\n",
     "---\n",
     "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/houdinis-framework)  \n",
+    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
     "**📜 License:** MIT - Use responsibly and ethically  \n",
     "**📅 Completion:** August 7, 2025  \n",
     "**🏆 Status:** FRAMEWORK COMPLETE AND OPERATIONAL\n",
