--- a/notebooks/Houdinis_Advanced_Features.ipynb
+++ b/notebooks/Houdinis_Advanced_Features.ipynb
@@ -1516,7 +1516,7 @@
     "\n",
     "---\n",
     "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/houdinisframework)  \n",
+    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
     "**📜 License:** MIT - Use responsibly and ethically"
    ]
   },
