--- a/notebooks/IBM_Quantum_Experience_Integration.ipynb
+++ b/notebooks/IBM_Quantum_Experience_Integration.ipynb
@@ -309,7 +309,7 @@
     "\n",
     "---\n",
     "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/houdinisframework)  \n",
+    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
     "**📜 License:** MIT - Use responsibly and ethically"
    ]
   }
